[package]
name = "european_exchange_api_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
async-trait = "0.1.59"
mongodb = "2.3.1"
serde = {version = "1.0.151", features = ["derive"]}
serde_json = {version = "1.0.89"}
